# script.service.betaseries-watched

./: .gitignore  Dockerfile.dev  Makefile  README.md  addon.py  addon.xml  behave.ini  changelog.txt  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  service.py
.github/workflows/: code-analysis.yml  integration.yml  python-package.yml  release.yml
resources/: settings.xml
resources/data/: config.ini
resources/language/resource.language.en_gb/: strings.po
resources/language/resource.language.fr_fr/: strings.po
resources/lib/: Launcher.py  __init__.py  kernel.py  launcher.py
resources/lib/adapter/: CacheRepository.py  Logger.py  MediumRepositoryInterface.py  Settings.py  __init__.py  betaseries.py  cache.py  kodi.py  logger.py  settings.py
resources/lib/adapter/betaseries/: BearerRepository.py  EpisodeRepository.py  MediumRepositoryAbstract.py  MovieRepository.py  __init__.py
resources/lib/adapter/kodi/: EpisodeRepository.py  __init__.py  (+1 more)
resources/lib/appli/: betaseries.py  kodi.py  settings.py
resources/lib/entity/: MediumEntity.py  __init__.py
resources/lib/infra/: SimpleCache.py  __init__.py  betaseries.py  kodi.py  monitor.py  pymod.py  xbmcmod.py
resources/lib/service/: Authentication.py  Deamon.py  WatchSynchro.py  __init__.py  authentication.py  movie.py  sync.py
resources/lib/util/: Container.py  __init__.py  di.py
resources/test/: mock.py
resources/test/adapter/: test_betaseries.py  test_kodi.py  test_settings.py
resources/test/appli/: test_betaseries.py  test_kodi.py
resources/test/features/: environment.py  synchronize_movies.feature  synchronize_tvshows.feature
resources/test/service/: test_authentication.py  test_movie.py  test_sync.py
resources/test/util/: test_di.py
(+27 files in other folders)
